# PixLang

./: README.md
image_pipeline/: .gitignore  CMakeLists.txt  filters.dsl
image_pipeline/pixel_plot/: CMakeLists.txt  filters.dsl
image_pipeline/pixel_plot/include/glad/: glad.h
image_pipeline/pixel_plot/shaders/: basic.frag  generated.frag
image_pipeline/pixel_plot/src/: glad.c  main.cpp
image_pipeline/src/: main.cpp
